Added CPP version of ObjectDetection

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Python requirements only. For C++ dependencies, see ObjectDetectionCpp/CMakeLists.txt
 opencv-python>=4.9.0
 numpy>=1.26.0
 ultralytics>=8.1.0 
